--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -57,6 +57,8 @@ body {
     overflow: hidden;
     font-family: Roboto;
     padding: 0;
+    left: 10px !important;
+    top: 10px !important;
   }
 
   #pac-container {
